fix: week 3
