# src/main/resources/ms-credit-openapi.yaml
@@ -16,6 +16,8 @@ tags:
     description: credit
   - name: CreditCard
     description: credit type
+  - name: DebitCard
+    description: debit type
 
 paths:  
   /credit:
@@ -99,7 +101,47 @@ paths:
             type: string
       responses:
         '200':
-          description: delete credit by id          
+          description: delete credit by id    
+  /credit/count-expired:
+    get:
+      tags:
+        - Credit
+      operationId: countByClientIdAndPaymentDueDate
+      description: GET
+      parameters:
+        - in: query
+          name: clientId
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'response get credit card by client id'
+          content:
+            application/json:
+              schema:
+                type: integer     
+  /credit/{cardNumber}:
+    patch:
+      tags:
+        - Credit
+      operationId: modifyCredit
+      description: 'PATCH'
+      parameters:
+        - in: path
+          name: cardNumber
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: '#/components/requestBodies/CreditRequest'
+      responses:
+        '200':
+          description: 'response credit card put'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreditResponse' 
   /credit-card:
     post:
       tags:
@@ -150,6 +192,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CreditCardResponse'
+          
     get:
       tags:
         - CreditCard
@@ -200,7 +243,75 @@ paths:
           content:
             application/json:
               schema:
-                type: integer
+                type: integer  
+  /debit-card:
+    post:
+      tags:
+        - DebitCard
+      operationId: addDebitCard
+      description: 'POST'
+      requestBody:
+        $ref: '#/components/requestBodies/DebitCardRequest'
+      responses:
+        '200':
+          description: 'response debit card post'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DebitCardResponse'                  
+    get:
+      tags:
+        - DebitCard
+      operationId: getAllDebitCard
+      description: GETALL
+      responses:
+        '200':
+          description: 'response get all debit card'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DebitCardResponse'
+  /debit-card/{debitCardId}:
+    put:
+      tags:
+        - DebitCard
+      operationId: updateDebitCard
+      description: 'PUT'
+      parameters:
+        - in: path
+          name: debitCardId
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: '#/components/requestBodies/DebitCardRequest'
+      responses:
+        '200':
+          description: 'response debit card put'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DebitCardResponse'
+    get:
+      tags:
+        - DebitCard
+      operationId: getDebitCardById
+      description: GET
+      parameters:
+        - in: path
+          name: debitCardId
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'response get debit card by id'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DebitCardResponse'
 
 components:
   schemas:
@@ -210,16 +321,27 @@ components:
       required:        
         - clientTypeId
       properties:        
-        clientTypeId:
+        clientId:
           type: string
-          example: 1          
+          example: 1    
+        productId:
+          type: string
+          example: 1       
         cardNumber:
           type: string
           example: '4521254521452587'  
         amountRequested:
           type: number
           format: double
-          example: 20.5
+          example: 20.0
+        amountPaid:
+          type: number
+          format: double
+          example: 5.0
+        debtAmount:
+          type: number
+          format: double
+          example: 15.0
         maxMonthsOfPayment:
           type: integer
           example: 12             
@@ -230,16 +352,27 @@ components:
         creditId:
           type: string
           example: '1'
-        clientTypeId:
+        clientId:
           type: string
-          example: '1'
+          example: 1    
+        productId:
+          type: string
+          example: 1
         cardNumber:
           type: string
           example: '4521254521452587'  
         amountRequested:
           type: number
           format: double
-          example: 20.5
+          example: 20.0
+        amountPaid:
+          type: number
+          format: double
+          example: 5.0
+        debtAmount:
+          type: number
+          format: double
+          example: 15.0
         maxMonthsOfPayment:
           type: integer
           example: 12  
@@ -249,7 +382,10 @@ components:
           example: 20.5
         requestedDate:
           type: string
-          format: date-time
+          example: '01/01/2024 00:00'
+        paymentDueDate:
+          type: string
+          example: '01/01/2024 00:00'
     CreditCardRequest:
       type: object
       description: Credit type model
@@ -263,17 +399,9 @@ components:
         cardNumber:
           type: string
           example: '4521254521452587' 
-        availableAmount:
-          type: number
-          format: double
-          example: 50.7
-        creditLimit:
-          type: number
-          format: double
-          example: 2000
         expirationDate:
           type: string
-          format: date-time
+          example: '01/01/2024 00:00'
     CreditCardResponse:
       type: object
       description: Credit type model
@@ -300,7 +428,60 @@ components:
           example: 2000
         expirationDate:
           type: string
-          format: date-time
+          example: '01/01/2024 00:00'
+    DebitCardRequest:
+      type: object
+      description: Debit model
+      properties:
+        productId:
+          type: string
+          example: '1'
+        clientId:
+          type: string
+          example: '1'
+        cardNumber:
+          type: string
+          example: '4521254521452587' 
+        expirationDate:
+          type: string
+          example: '01/01/2024 00:00'
+        associatedMainAccount:
+          type: string
+          example: '12122525253636'
+        otherAssociatedAccounts:
+          type: array
+          items:
+            type: string
+    DebitCardResponse:
+      type: object
+      description: Credit type model
+      properties:
+        debitCardId:
+          type: string
+          example: '1'
+        productId:
+          type: string
+          example: '1'
+        clientId:
+          type: string
+          example: '1'
+        cardNumber:
+          type: string
+          example: '4521254521452587' 
+        availableAmount:
+          type: number
+          format: double
+          example: 50.7
+        expirationDate:
+          type: string
+          example: '01/01/2024 00:00'
+        associatedMainAccount:
+          type: string
+          example: '12122525253636'
+        otherAssociatedAccounts:
+          type: array
+          items:
+            type: string
   requestBodies:
     CreditRequest:
       required: true
@@ -314,3 +495,9 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/CreditCardRequest'
+    DebitCardRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/DebitCardRequest'
